--- a/PerfulandiaSpa/pom.xml
+++ b/PerfulandiaSpa/pom.xml
@@ -8,11 +8,11 @@
 		<version>3.4.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.perfulandiaSpa</groupId>
-	<artifactId>PerfulandiaSpa</artifactId>
+	<groupId>com.perfulandia_spa</groupId>
+	<artifactId>perfulandia_spa</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>PerfulandiaSpa</name>
-	<description>Proyecto Perfulandia spa</description>
+	<name>perfulandia_spa</name>
+	<description>Perfulandia SPA</description>
 	<url/>
 	<licenses>
 		<license/>
